# hk-covid-19-sms-rust

./: .gitignore  Cargo.toml
src/: constants.rs.sample  lib.rs  main.rs
